Closed Bug 324852 Opened 19 years ago Closed 17 years ago

Address performance regressions from frame display lists

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

Details

(Keywords: perf, regression)

Attachments

(1 file)

I want to get rid of the space and time penalty from bug 317375. 16K code bloat and Tp up 20ms on luna (10ms on btek).
Keywords: perf, regression
First, some trivial cleanup.
Attachment #209751 - Flags: superreview?(dbaron)
Attachment #209751 - Flags: review?(mrbkap)
Attachment #209751 - Flags: review?(mrbkap) → review+
Attachment #209751 - Flags: superreview?(dbaron) → superreview+
checked that in, thanks.
The fix for bug 324969 seems to have brought btek's Tp back to previous levels. Also see bug 317375 comment 145.
Flags: blocking1.9?
I'm going to close this. Eli's removed a bunch of view code that was obsoleted by frame display lists and I think we just have to believe that in the end it's a net win. Besides.
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: blocking1.9?
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: