Bug 324852. Clean up missing uses of NS_DISPLAY_DECL_NAME for a tiny space saving with frame display lists